[gd_scene load_steps=4 format=3 uid="uid://c2bhyc7k4b3x8"]

[ext_resource type="Script" path="res://Players/player.gd" id="1_6r0f3"]
[ext_resource type="Texture2D" uid="uid://dqff7qsbf3hyg" path="res://icon.svg" id="2_8sjpo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pqpnh"]
size = Vector2(128, 127)

[node name="Player" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_6r0f3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_8sjpo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_pqpnh")

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false
position_smoothing_enabled = true

[node name="Player_Name" type="Label" parent="."]
offset_left = -64.0
offset_top = -112.0
offset_right = 63.0
offset_bottom = -89.0
text = "玩家名"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="."]
self_modulate = Color(0.478431, 1, 0.101961, 1)
offset_left = -64.0
offset_top = -89.0
offset_right = 63.0
offset_bottom = -62.0
value = 100.0

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
